opam-version: "1.2"
name:         "rmtld3synth"
version:      "0.3-dev"
maintainer:   "apedro.1@gmail.com"
homepage:     "https://github.com/anmaped/rmtld3synth"
bug-reports:  "https://github.com/anmaped/rmtld3synth/issues"
dev-repo:     "https://github.com/anmaped/rmtld3synth.git"
authors: [
  "André Pedro"
]

depends: [
  "ocamlfind" {build}
  "dune" {build}
  "batteries" {build}
  "sexplib" {build}
  "ppx_sexp_conv" {build}
  "dolmen" {build}
]

available: [ ocaml-version >= "4.03.0" ]

build: [
  ["chmod" "ugo+x" "configure"]
  ["./configure" "--prefix=%{prefix}%"]
  [make "all"]
]

run-test: [make "tests"]
