opam-version: "2.0"
name:         "rmtld3synth"
version:      "0.4-dev"
maintainer:   "André Pedro <apedro.1@gmail.com>"
authors:      "André Pedro <apedro.1@gmail.com>"
homepage:     "https://github.com/anmaped/rmtld3synth"
bug-reports:  "https://github.com/anmaped/rmtld3synth/issues"
dev-repo:     "git+https://github.com/anmaped/rmtld3synth.git"
doc:          "https://github.com/anmaped/rmtld3synth#documentation"
synopsis:     "Runtime Verification toolchain"
description:  "Runtime Verification toolchain for generating monitors based on the restricted Metric Temporal Logic with Durations."

depends: [
  "ocamlfind" {build}
  "dune" {build}
  "bigarray-compat" {build}
  "sexplib" {build}
  "ppx_sexp_conv" {build}
  "dolmen" {build}
  "yojson" {build}
  "ppx_yojson_conv" {build}
]

build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make "setup"]
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

run-test: [make "tests"]
