opam-version: "2.0"
name:         "rmtld3synth"
version:      "0.5-dev"
maintainer:   "André Pedro <apedro.1@gmail.com>"
authors:      "André Pedro <apedro.1@gmail.com>"
homepage:     "https://github.com/anmaped/rmtld3synth"
bug-reports:  "https://github.com/anmaped/rmtld3synth/issues"
dev-repo:     "git+https://github.com/anmaped/rmtld3synth.git"
doc:          "https://github.com/anmaped/rmtld3synth#documentation"
synopsis:     "Runtime Verification toolchain"
description:  "Runtime Verification toolchain for generating monitors based on the restricted Metric Temporal Logic with Durations."

depends: [
  "ocamlfind" {build}
  "dune" {build}
  "bigarray-compat" {build}
  "sexplib" {build}
  "ppx_sexp_conv" {build}
  "dolmen" {build}
  "yojson" {build}
  "ppx_yojson_conv" {build}
  "z3" {="4.12.3"}
  "dolmen-export" {build}
]

pin-depends: [
  ["dolmen.dev" "git+https://github.com/Gbury/dolmen.git#e81b130ac0fdcd7e2b08603648c54c8ead8fbd7b"]
  ["dolmen-export.dev" "git+https://github.com/Gbury/dolmen.git#e81b130ac0fdcd7e2b08603648c54c8ead8fbd7b"]
]

build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make "setup"]
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

run-test: [make "tests" "allchecks"]
