
(library
  (name            interface)
  (public_name     rmtld3synth.interface)
  (libraries       rmtld3synth.helper rmtld3synth.rmtld3.extension rmtld3synth.interface.tex sexplib ppx_sexp_conv str %LIBRARIES% )
  (modules         Rmdslparser Mathkernel Mathkernel_call_ Z3solver_ )
  (preprocess      (pps ppx_sexp_conv))
  (c_library_flags -lstdc++)
)
