(rule
  (with-outputs-to test01.out
  (with-accepted-exit-codes 0
    (run bash -c "%{exe:../../src/rmtld3synth.exe} --synth-spark2014 --input-dsl $(cat %{dep:test01.in})")
)))

(rule
  (alias test)
  (action (diff test01.exp test01.out))
)

(rule
  (with-outputs-to test02.out
  (with-accepted-exit-codes 0
    (run bash -c "%{exe:../../src/rmtld3synth.exe} --synth-spark2014 --input-dsl \"$(cat %{dep:test02.in})\"")
)))

(rule
  (alias test)
  (action (diff test02.exp test02.out))
)

(rule
  (with-outputs-to test03.out
  (with-accepted-exit-codes 0
    (run bash -c "%{exe:../../src/rmtld3synth.exe} --synth-spark2014 --input-dsl \"$(cat %{dep:test03.in})\"")
)))

(rule
  (alias test)
  (action (diff test03.exp test03.out))
)

(rule
  (with-outputs-to test04.out
  (with-accepted-exit-codes 0
    (run bash -c "%{exe:../../src/rmtld3synth.exe} --synth-spark2014 --input-dsl \"$(cat %{dep:test04.in})\"")
)))

(rule
  (alias test)
  (action (diff test04.exp test04.out))
)

(rule
  (with-outputs-to test05.out
  (with-accepted-exit-codes 0
    (run bash -c "%{exe:../../src/rmtld3synth.exe} --synth-spark2014 --input-dsl \"$(cat %{dep:test05.in})\"")
)))

(rule
  (alias test)
  (action (diff test05.exp test05.out))
)