(executable
  (name test)
  (flags -w A-4-70)
  (libraries menhirLib rmtld3synth.interface.dsl)
  (modules Test)
  (modes exe)
)

; Language library definition
(library
  (name           dsl)
  (public_name    rmtld3synth.interface.dsl)
  (libraries      rmtld3synth.rmtld3 menhirLib)
  (modules        Lexer Parser Ast UnitActionsParser ParserMessages TranslateToRmtld3 Semantic Load)
  (modules_without_implementation ast)
)

; Common include
(include dune.common)